k8s/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  endpointSelector:
    matchLabels: {}
  ingress: []
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wire-api-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: wire-api
  ingress:
    # Allow traffic from ingress controller
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8001"
              protocol: TCP
  egress:
    # Allow API to talk to Redis and Database
    - toEndpoints:
        - matchLabels:
            app: redis
        - matchLabels:
            app: postgres
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: upload-worker-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: wire-workers
  ingress:
    # Workers don't take direct ingress, they pull from Redis/NATS
    []
  egress:
    # Allow workers to reach Redis and S3/MinIO
    - toEndpoints:
        - matchLabels:
            app: redis
        - matchLabels:
            app: minio
